MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Assignment_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Assignment Time</label>
    <type>DateTime</type>
</CustomField>