MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Event__c.field-meta.xml
<CustomField>
    <fullName>Lead_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Event</label>
    <referenceTo>Lead_Event__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>