MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Message__c.field-meta.xml
<CustomField>
    <fullName>Lead_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Message</label>
    <type>TextArea</type>
</CustomField>