MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Meta_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Meta_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead/Meta ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>