MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <description>Lead Number for Round Robin assignment of Modon Egypt Leads.</description>
    <label>Lead Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>