MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Lead_Originator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Originator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Originator</label>
    <length>150</length>
    <type>Text</type>
</CustomField>