MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/LeadAge__c.field-meta.xml
<CustomField>
    <fullName>LeadAge__c</fullName>
    <description>To calculate the date difference from the day the lead got created.
(In Hours)</description>
    <formula>IF(
    AND(
        NOT(ISBLANK(CreatedDate)),
        NOT(ISBLANK(NOW()))
    ),
    ROUND((NOW() - CreatedDate), 2),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>