MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/LeadEvent_Name__c.field-meta.xml
<CustomField>
    <fullName>LeadEvent_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Event Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>