MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/LeadMergeCount__c.field-meta.xml
<CustomField>
    <fullName>LeadMergeCount__c</fullName>
    <label>Lead Merge Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>