MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/LeadNumber__c.field-meta.xml
<CustomField>
    <fullName>LeadNumber__c</fullName>
    <displayFormat>ML{00000000}</displayFormat>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>