MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/LeadOrigin__c.field-meta.xml
<CustomField>
    <fullName>LeadOrigin__c</fullName>
    <label>Lead Origin Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>