MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Loqate_Processed__c.field-meta.xml
<CustomField>
    <fullName>Loqate_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loqate Processed</label>
    <type>Checkbox</type>
</CustomField>