MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Meta_Created_Date_TIme__c.field-meta.xml
<CustomField>
    <fullName>Meta_Created_Date_TIme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meta Created Date/TIme</label>
    <type>DateTime</type>
</CustomField>