MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Meta_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Lead_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meta Lead ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>