MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/MobileNumber1__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber1__c</fullName>
    <label>Mobile Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>