MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Modon_Egypt_Call_Now_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Modon_Egypt_Call_Now_Campaign__c</fullName>
    <label>Call Now Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>