MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Modon_Egypt_Interest_Reason__c.field-meta.xml
<CustomField>
    <fullName>Modon_Egypt_Interest_Reason__c</fullName>
    <label>Interest Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Inquiry (Checking prices, areas, available units, payment plans)</fullName>
            </value>
            <value>
                <fullName>Residential apartments (1–4 bedrooms)</fullName>
            </value>
            <value>
                <fullName>Chalets / townhouses / villas</fullName>
            </value>
            <value>
                <fullName>Requested callback</fullName>
            </value>
            <value>
                <fullName>Already contacted by sales team</fullName>
            </value>
            <value>
                <fullName>Commercial units</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>