MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/New_Account_Exception_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Account_Exception_Status__c</fullName>
    <label>New Account Exception Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>