MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/NumberOfBedrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBedrooms__c</fullName>
    <label>Number Of Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>1BHK + 1</fullName>
            </value>
            <value>
                <fullName>2 Bedroom</fullName>
                <label>2 BHK</label>
            </value>
            <value>
                <fullName>2 BHK + 1</fullName>
            </value>
            <value>
                <fullName>2 BHK + M</fullName>
            </value>
            <value>
                <fullName>3 Bedroom</fullName>
                <label>3 BHK</label>
            </value>
            <value>
                <fullName>3BHK + 1</fullName>
            </value>
            <value>
                <fullName>3BHK + 1 + M</fullName>
            </value>
            <value>
                <fullName>3BHK + M</fullName>
            </value>
            <value>
                <fullName>4 Bedroom</fullName>
                <label>4 BHK</label>
            </value>
            <value>
                <fullName>4 BHK + 1</fullName>
            </value>
            <value>
                <fullName>4 BHK + 1 + M</fullName>
            </value>
            <value>
                <fullName>4 BHK + M</fullName>
            </value>
            <value>
                <fullName>5 Bedroom</fullName>
                <label>5 BHK</label>
            </value>
            <value>
                <fullName>5 BHK + 2</fullName>
            </value>
            <value>
                <fullName>5 BHK + M</fullName>
            </value>
            <value>
                <fullName>6 Bedroom</fullName>
                <label>6 BHK</label>
            </value>
            <value>
                <fullName>6 BHK + 1 + M</fullName>
            </value>
            <value>
                <fullName>7 Bedroom</fullName>
                <label>7 BHK</label>
            </value>
            <value>
                <fullName>Beach House</fullName>
            </value>
            <value>
                <fullName>Pent House</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>8 Bedroom</fullName>
                <label>8 BHK</label>
            </value>
            <value>
                <fullName>2 Bedroom Duplex</fullName>
                <label>2 BHK Duplex</label>
            </value>
            <value>
                <fullName>3 Bedroom Duplex</fullName>
                <label>3 BHK Duplex</label>
            </value>
            <value>
                <fullName>4 Bedroom Townhouse</fullName>
                <label>4 BHK Townhouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>