MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Number</label>
    <type>Phone</type>
</CustomField>