MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OpportunityId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>