MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_ID__c</fullName>
    <description>Field for Modon Egypt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>