MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/ortoo_qra__Q_Assign_Exclude__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Q_Assign_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Q-Assign exclude</description>
    <label>Q Assign Exclude</label>
    <type>Checkbox</type>
</CustomField>