MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/OwnedBy__c.field-meta.xml
<CustomField>
    <fullName>OwnedBy__c</fullName>
    <label>Owned By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Owned by UAE National</fullName>
            </value>
            <value>
                <fullName>Partially Owned by UAE National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>