MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Owner_Director__c.field-meta.xml
<CustomField>
    <fullName>Owner_Director__c</fullName>
    <formula>IF(
    CONTAINS(Owner:User.UserRole.DeveloperName, &quot;Modon_Egypt_Sales_Associate&quot;),
    Owner:User.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.Manager.LastName,
    IF(
        CONTAINS(Owner:User.UserRole.DeveloperName, &quot;Modon_Egypt_Sales_Manager&quot;),
        Owner:User.Manager.FirstName &amp; &quot; &quot; &amp; Owner:User.Manager.LastName,
      
    IF(
        CONTAINS(Owner:User.UserRole.DeveloperName, &quot;Modon_Egypt_Sales_Director&quot;), 
        Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName, 
        &quot;&quot;) 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Director</label>
    <type>Text</type>
</CustomField>