MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <description>Lead Owner Email need for reporting</description>
    <formula>Owner:User.Email</formula>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>