MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>