MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>LEFT(MobilePhone, 4) &amp;&quot;*********&quot; &amp; RIGHT(MobilePhone, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>