MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Phone_Valid__c.field-meta.xml
<CustomField>
    <fullName>Phone_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Valid</label>
    <type>Checkbox</type>
</CustomField>