MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Phone_Validated__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Validated</label>
    <type>Checkbox</type>
</CustomField>