MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/PreferredContactTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactTime__c</fullName>
    <label>Preferred Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 am to 11 am</fullName>
            </value>
            <value>
                <fullName>11 am to 2 pm</fullName>
            </value>
            <value>
                <fullName>2 pm to 5 pm</fullName>
            </value>
            <value>
                <fullName>after 5 pm</fullName>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>7:00 am - 12:00 pm UK time</fullName>
            </value>
            <value>
                <fullName>12:00 pm - 17:00 pm UK time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>