MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/PreferredLeadOwner__c.field-meta.xml
<CustomField>
    <fullName>PreferredLeadOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Sales Associate</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Sales Associate</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Sales Manager</value>
        </filterItems>
        <filterItems>
            <field>$Source.LeadSource</field>
            <operation>equals</operation>
            <value>Sales Launch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>