MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Price_in_AED__c.field-meta.xml
<CustomField>
    <fullName>Price_in_AED__c</fullName>
    <label>Price in AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>