MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/ProjectInterest__c.field-meta.xml
<CustomField>
    <fullName>ProjectInterest__c</fullName>
    <inlineHelpText>This field is to capture the primary unit preference, the unit preference can be updated during booking.</inlineHelpText>
    <label>Project Interest</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectInterest</valueSetName>
    </valueSet>
</CustomField>