MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/PropertyType__c.field-meta.xml
<CustomField>
    <fullName>PropertyType__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Mansion</fullName>
            </value>
            <value>
                <fullName>Maisonnets</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Residence</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
            <value>
                <fullName>1 - 4 bedroom apartments</fullName>
                <isActive>false</isActive>
                <label>1 - 4 bedroom apartments</label>
            </value>
            <value>
                <fullName>FcNEvozOPN</fullName>
                <isActive>false</isActive>
                <label>FcNEvozOPN</label>
            </value>
            <value>
                <fullName>Option1</fullName>
                <isActive>false</isActive>
                <label>Option1</label>
            </value>
            <value>
                <fullName>Option2</fullName>
                <isActive>false</isActive>
                <label>Option2</label>
            </value>
            <value>
                <fullName>Option3</fullName>
                <isActive>false</isActive>
                <label>Option3</label>
            </value>
            <value>
                <fullName>Option5</fullName>
                <isActive>false</isActive>
                <label>Option5</label>
            </value>
            <value>
                <fullName>Property Type</fullName>
                <isActive>false</isActive>
                <label>Property Type</label>
            </value>
            <value>
                <fullName>PyfYAnYfd</fullName>
                <isActive>false</isActive>
                <label>PyfYAnYfd</label>
            </value>
            <value>
                <fullName>QlxabQMKofbAQl</fullName>
                <isActive>false</isActive>
                <label>QlxabQMKofbAQl</label>
            </value>
            <value>
                <fullName>TbhEESxXCPpnnyM</fullName>
                <isActive>false</isActive>
                <label>TbhEESxXCPpnnyM</label>
            </value>
            <value>
                <fullName>Townhouses</fullName>
                <isActive>false</isActive>
                <label>Townhouses</label>
            </value>
            <value>
                <fullName>Villas</fullName>
                <isActive>false</isActive>
                <label>Villas</label>
            </value>
            <value>
                <fullName>WAMbVtgnoM</fullName>
                <isActive>false</isActive>
                <label>WAMbVtgnoM</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
            <value>
                <fullName>twyjRJLH</fullName>
                <isActive>false</isActive>
                <label>twyjRJLH</label>
            </value>
            <value>
                <fullName>تاون هاوس</fullName>
                <isActive>false</isActive>
                <label>تاون هاوس</label>
            </value>
            <value>
                <fullName>شقة</fullName>
                <isActive>false</isActive>
                <label>شقة</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>