MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/PurposeofUse__c.field-meta.xml
<CustomField>
    <fullName>PurposeofUse__c</fullName>
    <label>Purpose of Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
                <isActive>false</isActive>
                <label>Not Disclosed</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>