MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/QA_Standardised_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>QA_Standardised_Phone_Number__c</fullName>
    <formula>IF(
    ISBLANK(MobilePhone),
    &quot;&quot;,
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                SUBSTITUTE(
                    SUBSTITUTE(
                        SUBSTITUTE(
                            SUBSTITUTE(
                                MobilePhone,
                                &quot;+&quot;, &quot;&quot;
                            ),
                            &quot; &quot;, &quot;&quot;
                        ),
                        &quot;-&quot;, &quot;&quot;
                    ),
                    &quot;(&quot;, &quot;&quot;
                ),
                &quot;)&quot;, &quot;&quot;
            ),
            &quot;&apos;&quot;, &quot;&quot;
        ),
        &quot;.&quot;, &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QA-Standardised Phone Number</label>
    <type>Text</type>
</CustomField>