MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Qualified_Lead_by_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Lead_by_Role_Name__c</fullName>
    <formula>QualifiedBy__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified Lead by Role Name</label>
    <type>Text</type>
</CustomField>