MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/ReAssignRRToSalesAssociate__c.field-meta.xml
<CustomField>
    <fullName>ReAssignRRToSalesAssociate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReAssign RR To Sales Associate</label>
    <type>Checkbox</type>
</CustomField>