MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Referral_Approve_Reject_By__c.field-meta.xml
<CustomField>
    <fullName>Referral_Approve_Reject_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Approve / Reject By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>