MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Referral_Unit__c.field-meta.xml
<CustomField>
    <fullName>Referral_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Unit</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Unit is not available</errorMessage>
        <filterItems>
            <field>Unit__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Leads (Referral Unit)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>