MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Referral_Unit_Ids__c.field-meta.xml
<CustomField>
    <fullName>Referral_Unit_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Unit Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>